@@ -27,10 +27,10 @@ class PanelizerNodeRevisionTest extends PanelizerTestHelper {
     parent::setUp();
 
     $perms = array(
-      'create page content',
       'administer content types',
       'administer nodes',
       'bypass node access',
+      'administer page manager',
       'use page manager',
       'administer panelizer',
     );
@@ -39,21 +39,40 @@ class PanelizerNodeRevisionTest extends PanelizerTestHelper {
   }
 
   /**
-   * Confirm that saving new node revisions will create a new {panelizer_entity}
-   * record.
+   * Confirm various aspects of revision handling work correctly.
    */
-  function testNewRevision() {
-    // Panelize "Basic page" content type and the 'default' display.
+  function testRevisionHandling() {
+    // Finding this class on the page will indicate it is using a default
+    // display.
+    $css_default_class = 'panelizer-default';
+
+    // Enable the node_view display in Page Manager.
+    $this->simpleEnablePage('node_view');
+
+    // Check the Page Manager admin page.
+    $this->drupalGet('admin/structure/pages');
+    $this->assertResponse(200);
+    $this->assertLink(t('Disable'));
+
+    // Panelize "Basic page" content type and the 'page_manager' display, give
+    // it a default display and allow multiple displays.
     $edit = array();
     $edit['panelizer[status]'] = TRUE;
-    $edit['panelizer[view modes][default][status]'] = TRUE;
-    $edit['panelizer[view modes][default][default]'] = TRUE;
-    $edit['panelizer[view modes][default][choice]'] = TRUE;
+    $edit['panelizer[view modes][page_manager][status]'] = TRUE;
+    $edit['panelizer[view modes][page_manager][default]'] = TRUE;
+    $edit['panelizer[view modes][page_manager][choice]'] = TRUE;
     $this->drupalPost('admin/structure/types/manage/page', $edit, t('Save content type'));
     $this->assertResponse(200);
 
+    // Add a custom class to the default display.
+    $this->drupalGet('admin/structure/types/manage/page/panelizer/page_manager/node:page:default/settings');
+    $edit = array(
+      'css_class' => $css_default_class,
+    );
+    $this->drupalPost(NULL, $edit, t('Save'));
+
     // Clone the default display.
-    $this->drupalGet('admin/structure/types/manage/page/panelizer/default/node:page:default:default/clone');
+    $this->drupalGet('admin/structure/types/manage/page/panelizer/page_manager/node:page:default/clone');
     $this->assertResponse(200);
     $this->assertText(t('Name'));
     $this->assertFieldById('edit-title', "Clone of Default", "Administrative Title");
@@ -63,19 +82,19 @@ class PanelizerNodeRevisionTest extends PanelizerTestHelper {
     $this->drupalPost(NULL, array('name' => 'clone_of_default'), t('Save'));
     $this->assertResponse(200);
     // Confirm the status message.
-    $this->assertText(t('!item has been created.', array('!item' => 'node:page:clone_of_default:default')));
+    $this->assertText(t('!item has been created.', array('!item' => 'node:page:clone_of_default')));
 
     // Set a custom css class to identify this cloned display.
     $edit = array();
     $clone_css_class = 'panelizer-test-page-node-revisions-clone';
     $edit['css_class'] = $clone_css_class;
-    $this->drupalPost('admin/structure/types/manage/page/panelizer/default/node:page:clone_of_default:default/settings', $edit, t('Save'));
+    $this->drupalPost('admin/structure/types/manage/page/panelizer/page_manager/node:page:clone_of_default/settings', $edit, t('Save'));
     $this->assertResponse(200);
     $this->assertText(t('The settings have been updated.'));
 
     // Assert panel choice for new pages.
     $this->drupalGet('node/add/page');
-    $this->assertField('panelizer[default][name]', 'Display can be chosen on new page form');
+    $this->assertField('panelizer[page_manager][name]', 'Display can be chosen on new page form');
 
     // Create a node with default panelizer display.
     $edit = array();
@@ -93,19 +112,19 @@ class PanelizerNodeRevisionTest extends PanelizerTestHelper {
     // Assert panel choice for existing pages.
     $this->drupalGet('node/' . $node->nid . '/edit');
     $this->assertResponse(200);
-    $this->assertField('panelizer[default][name]', 'Display can be chosen on edit page form');
+    $this->assertField('panelizer[page_manager][name]', 'Display can be chosen on edit page form');
 
     // Create a new revision with a different display.
     $langcode = LANGUAGE_NONE;
     $edit["revision"] = 1;
     $edit["log"] = "Changed panelizer display in a revision";
-    $edit["panelizer[default][name]"] = 'node:page:clone_of_default:default';
+    $edit["panelizer[page_manager][name]"] = 'node:page:clone_of_default';
     $this->drupalPost('node/' . $node->nid . '/edit', $edit, t('Save'));
     $this->assertResponse(200);
     $this->assertLink(t('Revisions'), 0, 'The node has multiple revisions');
 
     // Check that the new revision is rendered using the cloned display.
-    $elements = $this->xpath('//div[contains(@class,:class)]', array(':class' => $clone_css_class));
+    $elements = $this->xpath('//body[contains(@class,:class)]', array(':class' => $clone_css_class));
     $this->assertEqual(count($elements), 1, 'The node is using the cloned display.');
 
     // Confirm that the revisions tab is now available.
@@ -118,13 +137,15 @@ class PanelizerNodeRevisionTest extends PanelizerTestHelper {
     $this->assertNotNull($oldest_revision->vid);
     $this->drupalGet('node/' . $node->nid . '/revisions/' . $oldest_revision->vid . '/view');
     $this->assertResponse(200);
-    $elements = $this->xpath('//div[contains(@class,:class)]', array(':class' => $clone_css_class));
+    $elements = $this->xpath('//body[contains(@class,:class)]', array(':class' => $clone_css_class));
     $this->assertEqual(count($elements), 0, 'The node revision is not using the cloned display.');
-    $elements = $this->xpath('//div[contains(@class,:class)]', array(':class' => 'panelizer-view-mode'));
+    // @todo Panelizer doesn't add a body class for default displays, need to
+    // add a default class.
+    $elements = $this->xpath('//body[contains(@class,:class)]', array(':class' => $css_default_class));
     $this->assertEqual(count($elements), 1, 'The node is using the default display.');
 
     // Clone the cloned display.
-    $this->drupalGet('admin/structure/types/manage/page/panelizer/default/node:page:clone_of_default:default/clone');
+    $this->drupalGet('admin/structure/types/manage/page/panelizer/page_manager/node:page:clone_of_default/clone');
     $this->assertResponse(200);
     $this->assertText(t('Name'));
     $this->assertFieldById('edit-title', "Clone of Clone of Default", "Administrative Title");
@@ -133,13 +154,13 @@ class PanelizerNodeRevisionTest extends PanelizerTestHelper {
     // machine-name.js, which doesn't work via SimpleTest.
     $this->drupalPost(NULL, array('name' => 'clone_of_clone_of_default'), t('Save'));
     $this->assertResponse(200);
-    $this->assertText(t('!item has been created.', array('!item' => 'node:page:clone_of_clone_of_default:default')));
+    $this->assertText(t('!item has been created.', array('!item' => 'node:page:clone_of_clone_of_default')));
 
     // Set a custom css class to identify this cloned display.
     $edit = array();
     $clone_of_clone_css_class = 'panelizer-test-page-node-revisions-cloned-clone';
     $edit['css_class'] = $clone_of_clone_css_class;
-    $this->drupalPost('admin/structure/types/manage/page/panelizer/default/node:page:clone_of_clone_of_default:default/settings', $edit, t('Save'));
+    $this->drupalPost('admin/structure/types/manage/page/panelizer/page_manager/node:page:clone_of_clone_of_default/settings', $edit, t('Save'));
     $this->assertResponse(200);
     $this->assertText(t('The settings have been updated.'));
 
@@ -150,12 +171,12 @@ class PanelizerNodeRevisionTest extends PanelizerTestHelper {
     $edit["body[$langcode][0][value]"] = $node->body[$langcode][0]["value"];
     $edit["revision"] = 1;
     $edit["log"] = "Changed panelizer display in another revision";
-    $edit["panelizer[default][name]"] = 'node:page:clone_of_clone_of_default:default';
+    $edit["panelizer[page_manager][name]"] = 'node:page:clone_of_clone_of_default';
     $this->drupalPost('node/' . $node->nid . '/edit', $edit, t('Save'));
     $this->assertResponse(200);
 
     // Check that the new revision is rendered using the cloned display.
-    $elements = $this->xpath('//div[contains(@class,:class)]', array(':class' => $clone_of_clone_css_class));
+    $elements = $this->xpath('//body[contains(@class,:class)]', array(':class' => $clone_of_clone_css_class));
     $this->assertEqual(count($elements), 1, 'The node is using the cloned display.');
 
     // Check that the oldest revision is still using the default display.
@@ -165,39 +186,103 @@ class PanelizerNodeRevisionTest extends PanelizerTestHelper {
     $this->assertNotNull($oldest_revision->vid);
     $this->drupalGet('node/' . $node->nid . '/revisions/' . $oldest_revision->vid . '/view');
     $this->assertResponse(200);
-    $elements = $this->xpath('//div[contains(@class,:class)]', array(':class' => $clone_of_clone_css_class));
+    $elements = $this->xpath('//body[contains(@class,:class)]', array(':class' => $clone_of_clone_css_class));
     $this->assertEqual(count($elements), 0, 'The node revision is NOT using the clone of cloned display.');
-    $elements = $this->xpath('//div[contains(@class,:class)]', array(':class' => $clone_css_class));
+    $elements = $this->xpath('//body[contains(@class,:class)]', array(':class' => $clone_css_class));
     $this->assertEqual(count($elements), 0, 'The node revision is NOT using the cloned display.');
-    $elements = $this->xpath('//div[contains(@class,:class)]', array(':class' => 'panelizer-view-mode'));
+    // @todo Panelizer doesn't add a body class for default displays, need to
+    // add a default class.
+    $elements = $this->xpath('//body[contains(@class,:class)]', array(':class' => $css_default_class));
     $this->assertEqual(count($elements), 1, 'The node revision is using the default display.');
 
     // Check that the previous revision is still using the original cloned
     // display.
-    $previous_revision = array_pop($revisions);
-    $this->assertNotNull($previous_revision->vid);
-    $this->drupalGet('node/' . $node->nid . '/revisions/' . $previous_revision->vid . '/view');
+    $node_revision = array_pop($revisions);
+    $this->assertNotNull($node_revision->vid);
+    $node_revision = node_load(NULL, $node_revision->vid);
+    $this->drupalGet('node/' . $node->nid . '/revisions/' . $node_revision->vid . '/view');
     $this->assertResponse(200);
-    $elements = $this->xpath('//div[contains(@class,:class)]', array(':class' => $clone_of_clone_css_class));
+    $elements = $this->xpath('//body[contains(@class,:class)]', array(':class' => $clone_of_clone_css_class));
     $this->assertEqual(count($elements), 0, 'The node revision is NOT using the clone of cloned display.');
-    $elements = $this->xpath('//div[contains(@class,:class)]', array(':class' => $clone_css_class));
+    $elements = $this->xpath('//body[contains(@class,:class)]', array(':class' => $clone_css_class));
     $this->assertEqual(count($elements), 1, 'The node revision is using the default display.');
-  }
 
-  /**
-   * Confirm that deleting a node revision will only delete the appropriate
-   * {panelizer_entity} record.
-   */
-  function testDeletingRevision() {
-    // @todo.
-  }
+    // Get the number of {panelizer_entity} records currently recorded for this
+    // node.
+    $old_count = db_select('panelizer_entity', 'pe')
+      ->fields('pe')
+      ->condition('entity_type', 'node')
+      ->condition('entity_id', $node->nid)
+      ->countQuery()
+      ->execute()
+      ->fetchField();
 
-  /**
-   * Confirm that reverting to a specific revision will create the appropriate
-   * {panelizer_entity} record.
-   */
-  function testRevertingRevision() {
-    // @todo.
+    // Delete a revision.
+    $this->drupalGet('node/' . $node->nid . '/revisions/' . $node_revision->vid . '/delete');
+    $this->assertResponse(200);
+    $t_args = array(
+      '%revision-date' => format_date($node_revision->revision_timestamp),
+    );
+    $this->assertText(strip_tags(t('Are you sure you want to delete the revision from %revision-date?', $t_args)));
+    $this->assertText(t('This action cannot be undone.'));
+    $this->drupalPost(NULL, array(), t('Delete'));
+    $this->assertResponse(200);
+    $t_args = array(
+      '%revision-date' => format_date($node_revision->revision_timestamp),
+      '@type' => node_type_get_name($node_revision),
+      '%title' => $node_revision->title,
+    );
+    $this->assertText(strip_tags(t('Revision from %revision-date of @type %title has been deleted.', $t_args)));
+
+    // Confirm only one {panelizer_entity} record was deleted.
+    $records = db_select('panelizer_entity', 'pe')
+      ->fields('pe')
+      ->condition('entity_type', 'node')
+      ->condition('entity_id', $node->nid)
+      ->orderBy('pe.revision_id')
+      ->execute()
+      ->fetchAll();
+    $this->assertEqual($old_count, count($records) + 1);
+    $this->verbose(print_r($records, TRUE));
+
+    // Revert to the first revision.
+    $revisions = node_revision_list($node);
+    $node_revision = array_pop($revisions);
+    $node_revision = node_load(NULL, $node_revision->vid);
+    $this->drupalGet('node/' . $node->nid . '/revisions/' . $node_revision->vid . '/revert');
+    $this->assertResponse(200);
+    $t_args = array(
+      '%revision-date' => format_date($node_revision->revision_timestamp),
+    );
+    $this->assertText(strip_tags(t('Are you sure you want to revert to the revision from %revision-date?', $t_args)));
+    $this->drupalPost(NULL, array(), t('Revert'));
+    $this->assertResponse(200);
+    $t_args = array(
+      '@type' => node_type_get_name($node_revision),
+      '%title' => $node_revision->title,
+      '%revision-date' => format_date($node_revision->revision_timestamp),
+    );
+    $this->assertText(strip_tags(t('@type %title has been reverted back to the revision from %revision-date.', $t_args)));
+
+    // Confirm one more {panelizer_entity} record was added.
+    $records = db_select('panelizer_entity', 'pe')
+      ->fields('pe')
+      ->condition('entity_type', 'node')
+      ->condition('entity_id', $node->nid)
+      ->orderBy('pe.revision_id')
+      ->execute()
+      ->fetchAll();
+    $this->assertEqual($old_count, count($records));
+    $this->verbose(print_r($records, TRUE));
+
+    $this->drupalGet('node/' . $node->nid);
+    $this->assertResponse(200);
+    $elements = $this->xpath('//body[contains(@class,:class)]', array(':class' => $clone_css_class));
+    $this->assertEqual(count($elements), 0, 'The node revision is not using the cloned display.');
+    // @todo Panelizer doesn't add a body class for default displays, need to
+    // add a default class.
+    $elements = $this->xpath('//body[contains(@class,:class)]', array(':class' => $css_default_class));
+    $this->assertEqual(count($elements), 1, 'The node is using the default display again.');
   }
 
 }
